Added favicon, title, and description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quicktodo",
-  "homepage": "https://Rakshit-Shrivastava/quicktodo",
+  "homepage": "https://Rakshit-Shrivastava.github.io/quicktodo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
